--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,89 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app {
+    display: grid;
+    /* grid-template-columns: repeat(5, 1fr); */
+    grid-template-columns: 220px  70vw;
+    grid-template-rows: 100vh;
+    grid-template-areas: 
+    "sidebar content "
+    "sidebar content "
+    "sidebar content "
+    "sidebar content "
+    ;
+    grid-gap: 10px;
+}
+
+body {
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+h1 {
+  text-align: center;
+  color: #240046;
+  font-family: 'Didact Gothic', sans-serif;
+  margin: 20px 0 20px 0;
+}
+
+.navbar {
+  grid-area: sidebar;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-around; */
+  width: 150px;
+  height: 100%;
+  /* position: fixed; */
+  /* background-color: #9d4edd; */
+  background-color: #e7c6ff;
+}
+
+.navbar li:hover a {
+  color: #ffd6ff;
+}
+
+ul {
+  list-style: none;
+  font-size: 20px;
+}
+
+li {
+  height: 30px;
+  margin-bottom: 25px;
+  margin-top: 15px;
+}
+
+a {
+  text-decoration: none;
+  color: #240046;
+}
+
+a:hover {
+  color: #b9faf8;
+}
+
+a:visited {
+  color: #240046;
+}
+
+.welcome-msg {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+}
+
+.content {
+  grid-area: content;
+  font-family: 'Didact Gothic', sans-serif;
+}
+
+p {
+  font-size: 18px;
+}
+
+#register, #login {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
 }
